<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/aboutt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/ver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/aboutt"
        android:gravity="center"
        android:text="@string/ver"
        android:textSize="20dp" />

    <Button
        android:id="@+id/wiki"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/ver"
        android:layout_marginTop="15dp"
        android:background="@drawable/button"
        android:onClick="wiki"
        android:text="@string/site"
        android:textSize="25dp" />

    <Button
        android:id="@+id/RateMeSourse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/MinetestReadme"
        android:layout_marginTop="10dp"
        android:background="@drawable/button"
        android:onClick="RateMeSourse"
        android:text="Rate Me Plugin " />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/RateMeSourse"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="ALL sourse Minetest for Android Project: 
        http://goo.gl/o99V2a" />

    <TextView
        android:id="@+id/dev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:gravity="center"
        android:text="@string/dev" />

    <TextView
        android:id="@+id/SourseText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/wiki"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="Open Sourse!"
        android:textSize="25dp" />

    <Button
        android:id="@+id/MinetestReadme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/SourseText"
        android:layout_marginTop="10dp"
        android:background="@drawable/button"
        android:onClick="MinetestReadme"
        android:text="Minetest README" />

</RelativeLayout>